--- a/css/styles.css
+++ b/css/styles.css
@@ -222,11 +222,14 @@ button {
 
 .hero {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("/images/background-image/people-office-1.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-  background-color: white;
+
+  background-size: cover;
+  background-color: #2E2F42;
   padding: 188px 0px;
   text-align: center;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .main-title {
@@ -285,6 +288,12 @@ button {
   width: calc((100% - 72px) / 4);
 }
 
+.our-benefits-svg {
+border: 1px solid black;
+width: 264px;
+height: 122px;
+margin-bottom: 8px;
+}
 /* ==================== Our Works ==================== */
 .header-two {
   font-weight: 700;
@@ -359,6 +368,16 @@ flex-wrap: wrap;
   margin-bottom: 16px;
 }
 
+.social-media-footer {
+font-family: var(--primary-font);
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: white; 
+}
+
 
 /* *************** PORTFOLIO PAGE **************** */
 
@@ -431,6 +450,10 @@ border: 1px solid transparent;
   padding: 32px 16px;
   border: 1px solid #E7E9FC;
   border-top: none;
+}
+
+.portfolio-services-list-item:hover {
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-heading-two {
