--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,7 @@ button {
 
 .description-align {
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .description-footer {
@@ -134,7 +135,6 @@ button {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--logo-color);
-  
 }
 
 .logo-part {
@@ -156,9 +156,8 @@ button {
 }
 
 .page-header {
-
-  border-bottom: 1px solid #E7E9FC; 
-  }
+  border-bottom: 1px solid #e7e9fc;
+}
 
 .page-navigation {
   display: flex;
@@ -168,7 +167,6 @@ button {
 .menu {
   display: flex;
   align-items: center;
-  
 }
 
 .logo-link-header,
@@ -179,7 +177,6 @@ button {
 
 .logo-link-header {
   margin-right: 76px;
- 
 }
 
 .menu-item:not(:last-child) {
@@ -191,7 +188,7 @@ button {
 }
 
 .menu-link {
-   display: block;
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -221,10 +218,14 @@ button {
 /* ============ HERO ============== */
 
 .hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("/images/background-image/people-office-1.jpg");
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("/images/background-image/people-office-1.jpg");
 
   background-size: cover;
-  background-color: #2E2F42;
+  background-color: #2e2f42;
   padding: 188px 0px;
   text-align: center;
   max-width: 1440px;
@@ -258,11 +259,10 @@ button {
   padding: 16px 32px;
   min-width: 169px;
   height: 56px;
-  border: none; 
+  border: none;
   display: block;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .hero-btn:hover,
@@ -288,11 +288,18 @@ button {
   width: calc((100% - 72px) / 4);
 }
 
+.our-benefits-icon {
+  width: 264px;
+  height: 112px;
+  margin-bottom: 8px;
+  background: #f4f4fd;
+  border-radius: 4px;
+  padding: 24px 100px;
+}
+
 .our-benefits-svg {
-border: 1px solid black;
-width: 264px;
-height: 122px;
-margin-bottom: 8px;
+  width: 64px;
+  height: 64px;
 }
 /* ==================== Our Works ==================== */
 .header-two {
@@ -303,7 +310,6 @@ margin-bottom: 8px;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--primary-color-heading);
-
 }
 
 .section-works-list {
@@ -322,27 +328,26 @@ margin-bottom: 8px;
 
 .section-employee-list {
   display: flex;
-flex-wrap: wrap;
-/* gap: 24px; */
+  flex-wrap: wrap;
+  /* gap: 24px; */
 }
 
 .section-employee-list-item:not(:nth-child(4n)) {
   margin-right: 24px;
-}  
- 
+}
+
 .section-employee-list-item {
   flex-basis: calc((100% - 72px) / 4);
 }
 
 .section-employee-list-item {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
-
 }
 
 .employee-card-content {
   padding: 32px 16px;
-  
 }
 
 .section-employees {
@@ -351,6 +356,57 @@ flex-wrap: wrap;
 
 .section-employee-list-item {
   background-color: #ffffff;
+}
+
+/* --- Components for social media logos --- */
+
+.sm-employees-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.sm-list-link {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  justify-content: center;
+  align-items: center;
+}
+
+.sm-list-link:hover,
+.sm-list-link:focus {
+  background-color: #404bbf;
+}
+
+.sm-list-icon {
+  width: 16px;
+  height: 16px;
+  fill: white;
+}
+
+
+/* ====================CUSTOMERS===================== */
+
+.header-two-customers-section {
+  margin-bottom: 72px;
+}
+
+.customers-list {
+  display: flex;
+}
+
+.customer-listlink-icon {
+  border: 1px solid #8E8F99;
+border-radius: 4px;
+width: 168px;
+height: 88px;
+}
+
+.customers-icon {
+  fill: #8E8F99;
 }
 
 /* =================== FOOTER ================== */
@@ -369,15 +425,14 @@ flex-wrap: wrap;
 }
 
 .social-media-footer {
-font-family: var(--primary-font);
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: white; 
+  font-family: var(--primary-font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: white;
 }
-
 
 /* *************** PORTFOLIO PAGE **************** */
 
@@ -406,25 +461,23 @@ color: white;
   height: 48px;
   min-width: 69px;
 
-  border: 1px solid #E7E9FC;
+  border: 1px solid #e7e9fc;
   border-radius: 4px;
   padding: 12px 24px;
-
-  }
+}
 
 .portfolio-button-item:not(:last-child) {
-margin-right: 24px;
-
+  margin-right: 24px;
 }
 
 .portfolio-button:hover,
 .portfolio-button:focus {
   background-color: var(--accent-color);
   color: var(--background-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
-border: 1px solid transparent;
-
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  border: 1px solid transparent;
 }
 
 .portfolio-heading-two {
@@ -448,12 +501,13 @@ border: 1px solid transparent;
 
 .portfolio-card-content {
   padding: 32px 16px;
-  border: 1px solid #E7E9FC;
+  border: 1px solid #e7e9fc;
   border-top: none;
 }
 
 .portfolio-services-list-item:hover {
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-heading-two {
