--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,7 @@ button {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  max-width: 1440px;
   background-color: #2e2f42;
   padding: 188px 0px;
   text-align: center;
